force-app/main/default/objects/Promotion_Activity_Related_Data__c/Promotion_Activity_Related_Data__c.object-meta.xml
<CustomObject>
    <label>Promotion Activity Related Data</label>
    <nameField>
        <label>Promotion Activity Related Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotion Activity Related Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>