force-app/main/default/objects/Promotion_Activity_Related_Data__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <referenceTo>Promotion_Activity__c</referenceTo>
    <relationshipLabel>Promotion Activity Related Data</relationshipLabel>
    <relationshipName>Promotion_Activity_Related_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>