force-app/main/default/objects/Promotion_Activity_Related_Data__c/fields/Banner_Group__c.field-meta.xml
<CustomField>
    <fullName>Banner_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Banner Group</label>
    <referenceTo>Banner_Groups__c</referenceTo>
    <relationshipLabel>Promotion Activity Related Data</relationshipLabel>
    <relationshipName>Promotion_Activity_Related_Data</relationshipName>
    <type>Lookup</type>
</CustomField>