force-app/main/default/objects/Promotion_Activity_Related_Data__c/fields/Reach__c.field-meta.xml
<CustomField>
    <fullName>Reach__c</fullName>
    <label>Reach</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>