force-app/main/default/objects/Promotion_Activity_Related_Data__c/recordTypes/Banner_Group.recordType-meta.xml
<RecordType>
    <fullName>Banner_Group</fullName>
    <active>true</active>
    <label>Banner Group</label>
</RecordType>