force-app/main/default/objects/Promotion_Activity_Related_Data__c/recordTypes/Communication_Method.recordType-meta.xml
<RecordType>
    <fullName>Communication_Method</fullName>
    <active>true</active>
    <label>Communication Method</label>
</RecordType>